<resources>
    <string name="app_name">ColourMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="box_red">Box Red</string>
    <string name="box_green">Box Green</string>
    <string name="box_blue">Box Blue</string>
    <string name="how_to_play">How To Play</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons</string>
</resources>
